aks-survival-pack/demo3-chaosengineering-kubeinvaders/kubernetes-deployment-templates/chaos-nyan-cat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-nyan-cat-noncritical
  namespace: chaos-nyan-cat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chaos-nyan-cat
  template:
    metadata:
      labels:
        app: chaos-nyan-cat
    spec:
      containers:
      - name: chaos-nyan-cat
        image: guidemetothemoon/kube-nyan-cat:latest
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: chaos-nyan-cat-noncritical
  namespace: chaos-nyan-cat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: chaos-nyan-cat
